update coupon c
